--- a/WebApplication2/MasterPage/BaseMaster.master
+++ b/WebApplication2/MasterPage/BaseMaster.master
@@ -5,17 +5,17 @@
 <html>
 <head runat="server">
     <title></title>
-     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../styles/bootstrap.css" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="../styles/bootstrap.css" />
     <link rel="stylesheet" href="../styles/all.css" />
     <link rel="stylesheet" href="../styles/bootstrap-social.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    
+
     <style>
         .footer {
             position: fixed;
@@ -44,6 +44,16 @@
             .container, .container-fluid, .navbar, .navbar-header, #image1 {
                 width: 100%;
             }
+
+            .navbar-nav, .row {
+                
+                margin-top: 0px;
+                margin-left:35px;
+                margin-bottom:5px;
+            }
+            .row > li{
+                margin-right:15px;
+            }
         }
     </style>
 
@@ -63,30 +73,33 @@
 </head>
 <body>
     <form id="form1" runat="server">
-         <nav class="navbar navbar-inverse navbar-expand-sm navbar-light sticky-top" style="background-color: darkgreen; z-index:2">
+        <nav class="navbar navbar-inverse navbar-expand-sm navbar-light sticky-top" style="background-color: darkgreen; z-index: 2">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <asp:Image ID="Image1" runat="server" Height="50px" ImageUrl="~/images/logo1.png"  Width="50px" />
+                    <asp:Image ID="Image1" runat="server" Height="50px" ImageUrl="~/images/logo1.png" Width="50px" />
                     <a class="w3schools-logo notranslate"></a>
-                    <span>&nbsp<a class="navbar-brand" href="#" style="color: #FFFFFF">Ayushman Naturopathy Center</a></span>
+                    <span>&nbsp<a class="navbar-brand" href="/Index.aspx" style="color: #FFFFFF">Ayushman Naturopathy Center</a></span>
                 </div>
-                <button id="nav-btn" class="navbar-toggler navbar-toggler-right" style="width:20%; margin-top:1%; margin-bottom:1%;" type="button"  data-toggle="collapse" data-target="#collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                <%-- <button id="nav-btn" class="navbar-toggler navbar-toggler-right" style="width:20%; margin-top:1%; margin-bottom:1%;" type="button"  data-toggle="collapse" data-target="#collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>                
-                <div class="collapse navbar-collapse " id="collapsibleNavbar">
-                    <ul class="nav navbar-nav navbar-right" style="right: 0; margin-right: 20px; position: absolute;">
-                        <li class="nav-item">
-                            <asp:Button ID="button1" runat="server" CssClass="btn btn-outline-light w3-round-large" Text="Home" OnClick="button2_Click" />
+                </button>  --%>
+
+                <div class="navbar-nav" id="collapsibleNavbar">
+                    <ul class="nav navbar-nav navbar-right" style="right: 0; margin-right: 5px;">
+                        <div class="row">
+                            <li class="nav-item" >
+                                <asp:Button ID="button1" runat="server" CssClass="btn btn-outline-light w3-round-large " Text="Home" OnClick="button2_Click" />
+                            </li>
+                            &nbsp  
+                        <li class="nav-item  ">
+                            <asp:Button ID="button2" runat="server" CssClass="btn btn-outline-light w3-round-large " Text="Services" OnClick="Button1_Click1" />
                         </li>
-                        &nbsp  
+                            &nbsp  
                         <li class="nav-item">
-                            <asp:Button ID="button2" runat="server" CssClass="btn btn-outline-light w3-round-large" Text="Services" OnClick="Button1_Click1" />
-                        </li>   
-                         &nbsp  
-                        <li class="nav-item">
-                            <asp:Button ID="button3" runat="server" CssClass="btn btn-outline-light w3-round-large" Text="Gallery" OnClick="Button3_Click" />
-                        </li>  
-                        </ul>
+                            <asp:Button ID="button3" runat="server" CssClass="btn btn-outline-light w3-round-large " Text="Gallery" OnClick="Button3_Click" />
+                        </li>
+                        </div>
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -110,27 +123,27 @@
                     </div>
                     <div class="col-7 order-last" style="text-align: end">
                         Dr Sonal Chopra<br />
-                        <a class="fa fa-phone"><span>+91 9571763035 </span></a>
+                        <a class="fa fa-phone" href="tel:+91 9571763035" style="color: whitesmoke"><span>+91 9571763035 </span></a>
                         <br />
-                        <a class="fa fa-phone"><span>+91 9024906293 </span></a>
+                        <a class="fa fa-phone" href="tel:+91 9024906293" style="color: whitesmoke"><span>+91 9024906293</span></a>
                         <br />
-                        <a class="fa fa-envelope"><span>ayushmannaturopathycenter@gmail.com </span></a>
+                        <a class="fa fa-envelope" href="mailto: ayushmannaturopathycenter@gmail.com" style="color: whitesmoke"><span>ayushmannaturopathycenter@gmail.com </span></a>
                         <br />
 
                     </div>
                 </div>
                 <div class="col-12 col-md-12">
                     <div class="text-center order-last" style="padding-bottom: 0.5%">
-                        <a class="btn btn-light fa fa-facebook-square" href="http://www.facebook.com/profile.php?id=" style="font-size: xx-large;"></a>
-                        <a class="btn btn-light rounded fa fa-instagram" href="https://www.instagram.com/" style="font-size: xx-large;"></a>
-                        <a class="btn btn-light fa fa-envelope" href="mailto:" style="font-size: xx-large;"></a>
+                        <a class="btn btn-light fa fa-facebook-square" href="https://www.facebook.com/Ayushman-Naturopathy-Center-255063492230174" style="font-size: xx-large;"></a>
+                        <a class="btn btn-light rounded fa fa-instagram" href="https://www.instagram.com/ayushmannaturopathy/" style="font-size: xx-large;"></a>
+                        <a class="btn btn-light fa fa-envelope" href="mailto: ayushmannaturopathycenter@gmail.com" style="font-size: xx-large;"></a>
                     </div>
                 </div>
             </div>
         </div>
     </form>
-    
+
 </body>
-   
+
 
 </html>
